# rust-easydes

./: .gitignore  Cargo.toml  README.md  TESTING.md
src/: bin.rs  constants.rs  lib.rs  test_constants.rs
tests/: infile.txt
