[package]
name = "easydes"
version = "0.1.0"
edition = "2021"
authors = [
  "Hitbear <hitbear@thehitbear.com>",
]

[lib]
name = "easydes"
path = "src/lib.rs"

[[bin]]
name = "easydes"
path = "src/bin.rs"
required-features = ["clap"]

[dependencies]
clap = { version = "3.1", optional = true }
hex = "0.4.3"
proc-macro2 = "1.0.60"

[features]
default = ["clap"]
clap = ["dep:clap"]

